--- a/iliasnico/views/menu.xml
+++ b/iliasnico/views/menu.xml
@@ -1,4 +1,4 @@
 <odoo>
-<menuitem name="salle de vente" id="iliasnico_route_menu" web_icon="iliasnico,static/logo.flo.png"/>
-<menuitem name="Salle de vente" id="salledevente_route_mena" parents="iliasnico_route_menu" action="action_auctions"/>_
+<menuitem name="salle de vente" id="iliasnico_route_menu" web_icon="iliasnico,static/logoflo.png"/>
+<menuitem name="Salle de vente" id="salledevente_route_mena" parents="iliasnico_route_menu" action="action_auctions"/>
 </odoo>
